[package]
name = "pe-sign"
version = "0.1.0"
edition = "2021"
description = "A rust library for verifying and extracting signature information from PE files."
license = "MIT"

[lib]
name = "pesign"
path = "src/lib.rs"

[[bin]]
name = "pesign"
path = "src/main.rs"

[dependencies]
cms = { version = "0.2.3", features = ["std", "pem"] }
der = { version = "0.7.9", features = ["derive", "pem"] }
digest = { version = "0.10.7", features = ["oid"] }
pem-rfc7468 = { version = "1.0.0-rc.1", features = ["std"] }
rsa = "0.9.6"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
x509-cert = { version = "0.2.5", features = ["sct"] }
