[package]
name = "pe-sign"
version = "0.1.0"
edition = "2021"
authors = ["REinject"]
homepage = "https://github.com/0xlane/pe-sign"
repository = "https://github.com/0xlane/pe-sign"
description = "A rust library for verifying and extracting signature information from PE files."
keywords = ["portable-executable", "blue-team", "signature", "certificate"]
license = "MIT"

[lib]
name = "pesign"
path = "src/lib.rs"

[[bin]]
name = "pesign"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
build-binary = ["dep:clap", "dep:pretty-hex"]

[dependencies]
clap = { version = "4.5.17", optional = true }
pretty-hex = { version = "0.4.1", optional = true }
cms = { version = "0.2.3", features = ["std"] }
der = { version = "0.7.9", features = ["derive"] }
digest = { version = "0.10.7", features = ["oid"] }
exe = "0.5.6"
pem-rfc7468 = { version = "1.0.0-rc.1", features = ["std"] }
rsa = "0.9.6"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
x509-cert = { version = "0.2.5", features = ["sct"] }
chrono = "0.4.38"
